--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 .nav-link {
-    color: white;
+    color: #F2F2F2;
     font-size: larger;
 }
 
@@ -67,4 +67,18 @@
     --bs-btn-hover-border-color: tan !important;
     --bs-btn-active-bg: #4a5259 !important;
     --bs-btn-active-border-color: #4a5259 !important;
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    background-color: #F2F2F2;
+}
+.nav-tabs .nav-link{
+    border: #F2F2F2;
+}
+.nav-tabs {
+    border-bottom: none;
+}
+
+.navbar {
+    padding: 0 !important;
+    padding-top: 8px!important;
 }
