--- a/styles.css
+++ b/styles.css
@@ -68,20 +68,24 @@
     --bs-btn-active-bg: #4a5259 !important;
     --bs-btn-active-border-color: #4a5259 !important;
 }
+
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
     background-color: #F2F2F2;
 }
-.nav-tabs .nav-link{
+
+.nav-tabs .nav-link {
     border: #F2F2F2;
 }
+
 .nav-tabs {
     border-bottom: none;
 }
 
 .navbar {
     padding: 0 !important;
-    padding-top: 8px!important;
+    padding-top: 8px !important;
 }
+
 li input {
     border-radius: 4px;
     width: 100px;
@@ -91,32 +95,53 @@ li input {
     border-radius: 5px;
     margin-left: 2em;
 }
+
 @media only screen and (min-width: 600px) {
     .password-container {
         margin-left: 50em;
     }
 }
-.password-container input{
+
+.password-container input {
     font-size: 17px;
     border: none;
     width: 100px;
 }
+
 .hover-color-tan:hover {
     background-color: tan;
     color: white;
     border: black 1px solid;
 }
-#user-details{
+
+#user-details {
     color: white;
     font-weight: bold;
 }
-#logout-container{
+
+#logout-container {
     margin-left: 2em;
     display: none;
 }
+
 @media only screen and (min-width: 600px) {
     #logout-container {
-        margin-left: 62em;
+        margin-left: 60em;
         display: none;
     }
+    #login-container{
+        margin-left: 70em;
+    }
+}
+
+.table1-input {
+    float: right;
+}
+
+.table1-input-right {
+    float: right;
+    margin-right: 10px
+}
+.submit-btn{
+
 }
